--- a/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = INFO, CATALINA, TRACE, console, file
+log4j.rootLogger = INFO, CATALINA
 
 # Define all the appenders
 log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
